--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
+    "vue-chartkick": "^1.1.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
